# multiai

./: .gitignore  LICENSE  MANIFEST.in  Makefile  Readme.md  pyproject.toml  setup.py
dev/: .multiai  mypy.ini  setup.py  test.sh  upload.sh
docs/: _config.yml  app.py  index-ja.md  index.md  multiai.ipynb
docs/_includes/: contents.html
docs/_layouts/: default.html
multiai/: __init__.py  entry.py  multiai.py
multiai/data/: system.ini
src/multiai/: __init__.py  __main__.py  entry.py  multiai.py  printlong.py
src/multiai/data/: system.ini
